# Telegram_Ig_interaction

./: .gitignore  main.py  pyproject.toml
Code/: Bot.py
Code/Instagram/: Bot.py
Code/Meta/: App.py  Facebook.py  Instagram.py
Code/Telegram/: Bot.py  Client.py  TelegramUtils.py
Code/Thumbnail/: Newspaper.py
Code/Utils/: Logger.py
